# md2docx

./: .gitignore  README.md  pyproject.toml
src/md2docx/: cli.py
